--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="block">
-        <h1 class="title">Travel</h1>
+        <h1 class="title">Путешествие</h1>
         <p class="text">Donec sed odio dui. Cras mattis consectetur purus sit amet fermentum.</p>
         <img src="img/light_man_copy_26.png" alt="" class="exampele_img">
 
