--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Знакомство с html тегами Часть №2 </title>
     <link rel="stylesheet" href="css/css 2.css" />
+    <meta name="wiewport" content="width=devise-width">
 </head>
 
 <body>
